--- a/default.htm
+++ b/default.htm
@@ -13,7 +13,7 @@
 <meta name="Publisher" content="Mr Smith">
 <meta name="Copyright" content="Mr Smith">
 <meta name="Distributor" content="Global">
-<meta name="Rating" content="General">
+<meta name="Rating" content="How Would I Know">
 <meta name="Robots" content="index,follow">
 <meta name="Revisit-After" content="1 days">
 <meta name="DESCRIPTION" content="My Forums about my projects in the last 15 years">
